--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "loader": "^2.1.1",
     "render": "^0.1.4",
     "sqlite3": "^5.1.7"
   }
